Updated file - 0.9 bug fixes - header size - 18mb, loading time - 0.45

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body style="background-color: #082032;">
     <!-- partial:index.partial.html -->
-    <title>Online Python - IDE, Editor, Compiler, Interpreter</title>
+    <title>Leap Lite!</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <meta name="description" content="Build and Run your Python code instantly. Online-Python is a quick and easy tool that helps you to build, compile, test your python programs.">
